@@ -1,3 +1,7 @@
+2010-08-22  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp.eclass: Update documentation.
+
 2010-07-21  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-site-regen): The nullglob shell
